--- a/src/CombatAnalysis.App/Views/User/RegistrationView.xaml
+++ b/src/CombatAnalysis.App/Views/User/RegistrationView.xaml
@@ -15,13 +15,14 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.25*" />
+            <RowDefinition Height="0.2*" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="0.5*" />
+            <RowDefinition Height="0.05*" />
         </Grid.RowDefinitions>
 
         <Grid.Resources>
             <converters:TheNativeBoolToVisibilityConverter x:Key="BoolToVisibility" />
+            <converters:TheNativeIntToXAMLBoolConverter x:Key="IntToXAMLBool" />
         </Grid.Resources>
 
         <ContentControl Grid.RowSpan="4" Grid.ColumnSpan="4" Content="{Binding BasicTemplate}">
@@ -40,28 +41,68 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="0.4*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="0.75*"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="0.25*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="0.25*"/>
             </Grid.ColumnDefinitions>
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Email}" FontSize="18" Margin="0 20"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Email}" FontSize="16" />
                 <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding Email}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Password}" FontSize="18" Margin="0 20"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PhoneNumber}" FontSize="16" />
+                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding PhoneNumber}" />
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Birthday}" FontSize="16" />
+                <DatePicker Width="300" SelectedDate="{Binding Birthday}" Margin="0 10"/>
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Password}" FontSize="16" />
                 <PasswordBox Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="35" Width="300" FontSize="16"
                              PasswordChanged="PasswordBox_PasswordChanged"/>
             </StackPanel>
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PasswordConfirmation}" FontSize="18" Margin="0 20"/>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="4">
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PasswordConfirmation}" FontSize="16" />
                 <PasswordBox Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="35" Width="300" FontSize="16"
                              PasswordChanged="ConfirmPasswordBox_PasswordChanged"/>
             </StackPanel>
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
+
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Grid.Row="0">
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Username}" FontSize="16" />
+                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding Username}" />
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1">
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc FirstName}" FontSize="16" />
+                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding FirstName}" />
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2">
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc LastName}" FontSize="16" />
+                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding LastName}" />
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Column="3" Grid.RowSpan="2" Grid.Row="3">
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc AboutMe}" FontSize="16" />
+                <TextBox Style="{StaticResource messageTextBox}"  Height="120" TextWrapping="Wrap" Padding="5" Width="300" FontSize="16" Text="{Binding AboutMe}" />
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Orientation="Horizontal" Grid.Column="3" Grid.Row="4" Margin="25 -10">
+                <RadioButton Content="{loc:Loc Man}" IsChecked="{Binding Gender, Converter={StaticResource IntToXAMLBool}, ConverterParameter='0:='}" FontSize="14" Margin="25 0" />
+                <RadioButton Content="{loc:Loc Woman}" IsChecked="{Binding Gender, Converter={StaticResource IntToXAMLBool}, ConverterParameter='1:='}" FontSize="14" Margin="25 0" />
+            </StackPanel>
+
+            <Button Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="5" Height="30" Width="125" Content="{loc:Loc Registration}" Style="{StaticResource showButton}"
+                    Command="{Binding RegistrationCommand}" />
+            <Button Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="7" Height="30" Width="125" Content="{loc:Loc Back}" Style="{StaticResource showButton}"
+                    Command="{Binding CancelCommand}" />
+            
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="6">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc NeedAddData}"
                            FontSize="12" Foreground="Brown" Visibility="{Binding InputDataIsEmpty, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc EmailIsAlready}"
@@ -71,10 +112,6 @@
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Width="250" Height="80" TextWrapping="Wrap" Text="{loc:Loc RegistrationFailed}"
                            FontSize="12" Foreground="Brown" Visibility="{Binding ServerIsNotAvailable, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
             </StackPanel>
-            <Button Grid.Column="1" Grid.Row="4" Height="30" Width="125" Content="{loc:Loc Registration}" Style="{StaticResource showButton}"
-                    Command="{Binding RegistrationCommand}" />
         </Grid>
-        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Height="30" Width="125" Content="{loc:Loc Back}" Style="{StaticResource showButton}"
-                    Command="{Binding CancelCommand}" />
     </Grid>
 </views:MvxWpfView>
