--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
@@ -12,7 +12,8 @@
 
     &__content {
         display: flex;
-        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
     }
 
     &__menu {
@@ -20,7 +21,7 @@
         flex-direction: column;
         align-items: start;
         width: 25%;
-        margin: 10px 15px;
+        margin: 10px 25px;
         border-radius: 15px;
 
         .menu-item {
