--- a/src/CombatAnalysis.App/Views/DetailsSpecificalCombatView.xaml
+++ b/src/CombatAnalysis.App/Views/DetailsSpecificalCombatView.xaml
@@ -1,9 +1,11 @@
 ﻿<views:MvxWpfView
     x:Class="CombatAnalysis.App.Views.DetailsSpecificalCombatView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
     xmlns:loc="clr-namespace:CombatAnalysis.App.Localizations"
     xmlns:resx="clr-namespace:CombatAnalysis.App.Localizations.Resources.DetailsSpecificalCombat"
     xmlns:local="clr-namespace:CombatAnalysis.App.Views.ViewTemplates"
@@ -13,11 +15,15 @@
     mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
 
     <Grid>
+        <Grid.Resources>
+            <converters:TheNativeIntToVisibilityConverter x:Key="IntToVisibility" />
+        </Grid.Resources>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="0.15*"/>
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="0.15*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="55"/>
@@ -33,7 +39,7 @@
                 </DataTemplate>
             </ContentControl.Resources>
         </ContentControl>
-        
+
         <!--#region Combat data -->
         
         <Grid Visibility="Hidden">
@@ -43,7 +49,7 @@
         </Grid>
         
         <!--#endregion-->
-        
+
         <StackPanel Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1"
                     HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 -25"
                     Orientation="Horizontal">
@@ -53,13 +59,38 @@
                        Margin="50 0" FontSize="16" FontWeight="Bold"/>
         </StackPanel>
 
-        <StackPanel Grid.Column="2" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 -25" Orientation="Horizontal">
+        <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20 0" Orientation="Horizontal">
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{loc:Loc SelectedPlayer}" FontSize="15"/>
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding SelectedPlayer.UserName}" FontSize="16" FontWeight="Bold"/>
         </StackPanel>
-        
-        <DataGrid Background="Transparent" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" GridLinesVisibility="None" 
-                 CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
+
+        <StackPanel Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" Orientation="Horizontal">
+            <StackPanel>
+                <Icon:PackIconMaterial Kind="Eye" Foreground="Green" Width="13" HorizontalAlignment="Center"
+                                        VerticalAlignment="Bottom" Visibility="{Binding CombatInformationType, Converter={StaticResource IntToVisibility}, ConverterParameter='false:0:='}"/>
+                <TextBlock Text="Total value" FontSize="16"/>
+            </StackPanel>
+            <Icon:PackIconMaterial  Kind="ToggleSwitchOff" Width="200" Cursor="Hand"
+                                    VerticalAlignment="Bottom" Visibility="{Binding CombatInformationType, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:='}">
+                <Icon:PackIconMaterial.InputBindings>
+                    <MouseBinding Command="{Binding SwitchBetweenValuesCommand}" CommandParameter="1" Gesture="LeftClick"/>
+                </Icon:PackIconMaterial.InputBindings>
+            </Icon:PackIconMaterial>
+            <Icon:PackIconMaterial  Kind="ToggleSwitch" Width="200" Cursor="Hand" 
+                                    VerticalAlignment="Bottom" Visibility="{Binding CombatInformationType, Converter={StaticResource IntToVisibility}, ConverterParameter='true:1:='}">
+                <Icon:PackIconMaterial.InputBindings>
+                    <MouseBinding Command="{Binding SwitchBetweenValuesCommand}" CommandParameter="0" Gesture="LeftClick"/>
+                </Icon:PackIconMaterial.InputBindings>
+            </Icon:PackIconMaterial>
+            <StackPanel>
+                <Icon:PackIconMaterial  Kind="Eye" Foreground="Green" Width="13" HorizontalAlignment="Center"
+                                        VerticalAlignment="Bottom" Visibility="{Binding CombatInformationType, Converter={StaticResource IntToVisibility}, ConverterParameter='false:1:='}"/>
+                <TextBlock Text="Value per second" FontSize="16"/>
+            </StackPanel>
+        </StackPanel>
+
+        <DataGrid Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" GridLinesVisibility="None" 
+                 CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False" Style="{StaticResource dataGridStyle}"
                  Margin="20" ItemsSource="{Binding PlayersCombat}" SelectedItem="{Binding SelectedPlayer}">
             <DataGrid.Columns>
                 <DataGridTemplateColumn SortMemberPath="UserName" IsReadOnly="True" MinWidth="200">
@@ -79,9 +110,9 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Grid>
-                                <ProgressBar Height="25" Margin="10" Width="175" Name="pbStatus" Value="{Binding Path=DamageDone}" Minimum="0"
-                                         Maximum="{Binding ElementName=maxDamageDone, Path=Value}" Foreground="Blue" />
-                                <TextBlock Text="{Binding Path=DamageDone}" HorizontalAlignment="Center" FontSize="13" FontWeight="DemiBold" VerticalAlignment="Center" />
+                                <ProgressBar Height="25" Width="175" Name="pbStatus" Value="{Binding Path=DamageDone}" Minimum="0"
+                                         Maximum="{Binding ElementName=maxDamageDone, Path=Value}" Foreground="Blue" VerticalAlignment="Center"/>
+                                <TextBlock Text="{Binding Path=DamageDone}" HorizontalAlignment="Center" FontSize="13" FontWeight="DemiBold" VerticalAlignment="Center"/>
                             </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -116,6 +147,71 @@
                                 <ProgressBar Height="25" Margin="10" Width="175" Name="pbStatus" Value="{Binding Path=EnergyRecovery}" Minimum="0"
                                          Maximum="{Binding ElementName=maxEnergyRecovery, Path=Value}" Foreground="Brown" />
                                 <TextBlock Text="{Binding Path=EnergyRecovery}" HorizontalAlignment="Center" FontSize="13" FontWeight="DemiBold" VerticalAlignment="Center" />
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Resources}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <DataGrid Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" GridLinesVisibility="None" 
+                CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False" Style="{StaticResource dataGridStyle}"
+                Margin="20" ItemsSource="{Binding PlayersCombat}" SelectedItem="{Binding SelectedPlayer}"
+                Visibility="{Binding CombatInformationType, Converter={StaticResource IntToVisibility}, ConverterParameter='false:1:='}">
+            <DataGrid.Columns>
+                <DataGridTemplateColumn SortMemberPath="UserName" IsReadOnly="True" MinWidth="200">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=UserName}" VerticalAlignment="Center" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Player}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="DamageDone" IsReadOnly="True" Width="250">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <TextBlock Text="{Binding Path=DamageDonePerSecond, StringFormat=0.00}" HorizontalAlignment="Center" FontSize="14" FontWeight="DemiBold" VerticalAlignment="Center"/>
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Damage}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="HealDone" IsReadOnly="True" Width="250">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <TextBlock Text="{Binding Path=HealDonePerSecond, StringFormat=0.00}" HorizontalAlignment="Center" FontSize="14" FontWeight="DemiBold" VerticalAlignment="Center" />
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Healing}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="EnergyRecovery" IsReadOnly="True" Width="250">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <TextBlock Text="{Binding Path=EnergyRecoveryPerSecond, StringFormat=0.00}" HorizontalAlignment="Center" FontSize="14" FontWeight="DemiBold" VerticalAlignment="Center" />
                             </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
