Add combat players filters
Now users can apply a few filters when they checking players combat infromations:
 - min. damage/ min. DPS;
 - min. heal/ min. HPS;
 - min. resources/ min RPS.

--- a/src/CombatAnalysis.App/Views/User/LoginView.xaml
+++ b/src/CombatAnalysis.App/Views/User/LoginView.xaml
@@ -49,7 +49,7 @@
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Email}" FontSize="18" Margin="0 20"/>
-                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="30" Padding="3" Width="300" FontSize="14" Text="{Binding Email}" />
+                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="30" Padding="3" Width="300" FontSize="14" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Password}" FontSize="18" Margin="0 20"/>
